Expand Garbage Collection chapter with detailed GC types, algorithms, and monitoring